--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@ body {
   font-family: Inter;
 }
 
+.shadow-custom {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
 .flexCenter {
   @apply flex justify-center items-center;
 }
@@ -94,7 +98,7 @@ body {
 }
 
 .custom_menu-items {
-  @apply flex-col absolute left-0 mt-2 xs:min-w-[300px] w-fit max-h-64 origin-top-right rounded-xl bg-white border border-nav-border shadow-menu overflow-y-auto;
+  @apply flex-col absolute left-0 mt-2 xs:min-w-[300px] w-full max-h-64 origin-top-right rounded-xl bg-white border border-nav-border shadow-menu overflow-y-auto;
 }
 
 .custom_menu-item {
@@ -103,7 +107,7 @@ body {
 
 /* Footer */
 .footer {
-  @apply flex-col px-8 py-5 w-full gap-20 bg-light-white;
+  @apply flex-col  w-full gap-20 bg-light-white;
 }
 
 .footer_copyright {
@@ -130,12 +134,19 @@ body {
 
 /* Navbar */
 .navbar {
-  @apply py-5 px-8 border-b border-nav-border gap-4;
+  @apply  border-b border-nav-border gap-4;
+}
+
+/* py-5 px-8 */
+/* conatiner */
+
+.container{
+ @apply max-w-[1400px] m-auto p-5;
 }
 
 /* Profile Menu */
 .profile_menu-items {
-  @apply flex-col absolute right-1/2 translate-x-1/2 mt-3 p-7 sm:min-w-[300px] min-w-max rounded-xl bg-white border border-nav-border shadow-menu;
+  @apply flex-col absolute right-full translate-x-10 mt-3 p-5 xs:min-w-[200px] min-w-max rounded-xl bg-white  shadow-custom ;
 }
 
 /* Profile Card */
@@ -153,7 +164,7 @@ body {
 }
 
 .form_image-label {
-  @apply z-10 text-center w-full h-full p-20 text-gray-100 border-2 border-gray-50 border-dashed;
+  @apply z-10 text-center w-full h-full p-20 text-gray-100 border-2 border-gray-50 border-dashed rounded-xl;
 }
 
 .form_image-input {
